--- a/app/views/mirndv/index.html
+++ b/app/views/mirndv/index.html
@@ -25,7 +25,7 @@
          position: absolute;top: 5px;left: 10px; z-index: 10000;
       }
       #top_c_menu{cursor: pointer;
-         position: absolute;left: 50%;transform: translateX(-50%); z-index: 9999;
+         position: absolute;left: 50%;transform: translateX(-50%); -webkit-transform: translateX(-50%); z-index: 9999;
       }
       #top_r_menu img:hover ,#top_l_menu img:hover{
          cursor: pointer; margin-top:-5px;
